# ERC2020

./: .gitignore  README.md  test.txt
ar_tags_spawner/: CMakeLists.txt  package.xml
ar_tags_spawner/launch/: final.launch  spawn_artag.launch  spawn_on_marsyard.launch  spawn_tags.launch
ar_tags_spawner/models/m1/: m1.xacro
ar_tags_spawner/models/m10/: m10.dae  m10.xacro
ar_tags_spawner/models/m11/: m11.dae  m11.xacro
ar_tags_spawner/models/m12/: m12.dae  m12.xacro
ar_tags_spawner/models/m13/: m13.dae  m13.xacro
ar_tags_spawner/models/m14/: m14.xacro
ar_tags_spawner/models/m15/: m15.xacro
ar_tags_spawner/models/m2/: m2.xacro
ar_tags_spawner/models/m3/: m3.dae  m3.xacro
ar_tags_spawner/models/m4/: m4.dae  m4.xacro
ar_tags_spawner/models/m5/: m5.dae  m5.xacro
ar_tags_spawner/models/m6/: m6.dae  m6.xacro
ar_tags_spawner/models/m7/: m7.xacro
ar_tags_spawner/models/m8/: m8.dae  m8.xacro
ar_tags_spawner/models/m9/: m9.dae  m9.xacro
assertion_node/: CMakeLists.txt  package.xml
erc-supervisor/: CMakeLists.txt  package.xml
erc-supervisor/cfg/: ErcSupervisor.yaml
erc-supervisor/include/erc_supervisor/: ErcSupervisor.hpp  util.h
erc-supervisor/launch/: erc_supervisor.launch  final.launch  final_no_costmap.launch  final_with_filtering.launch  leo_rover_launch.launch
erc-supervisor/msg/: ErcGoal.msg
erc-supervisor/script/: install_navigation.py
erc-supervisor/src/: ErcSupervisor.cpp  erc_supervisor_main.cpp  reset_costmap.py
erc-supervisor/srv/: SeekOrientation.srv  SetGoalsId.srv  UserRotate.srv
erc_map_publisher/: CMakeLists.txt  package.xml
fiducial_msgs/: CMakeLists.txt
fiducial_slam/: CMakeLists.txt
img_saver/: CMakeLists.txt  package.xml
kalman_navigation/: CMakeLists.txt  package.xml
rotator/: CMakeLists.txt  package.xml
(+73 files in other folders)
