<?xml version="1.0"?>
<package format="2">
  <name>ar_tags_spawner</name>
  <version>0.0.0</version>
  <description>The ar_tags_spawner package</description>

  <maintainer email="blazej@todo.todo">blazej</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
